--- a/aluminium-doors-windows.html
+++ b/aluminium-doors-windows.html
@@ -102,7 +102,8 @@
                     <div class="dropdown-menu border-0 m-0">
                         <a href="./upvc-doors-windows.html" class="dropdown-item">UPVC Doors and Windows</a>
                         <a href="./aluminium-doors-windows.html" class="dropdown-item">Aluminium Doors and Windows</a>
-                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal Partitions</a>
+                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal
+                            Partitions</a>
                         <a href="./facades.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
@@ -188,21 +189,22 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
+                        <img class="img-fluid" src="img/about-9.png" alt="Hotel-sadka-client-aleco"
                             title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
+                        <img class="img-fluid" src="img/about-10.png" alt="Mount-litera-Zee-school-Amritsar"
                             title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">1. Casement UPVC Windows</h1>
-                    <p>Casement windows are the most popular type of frame frames. They are also known as crank windows.
-                        These windows have hinges on the side walls structuree frame that allow them to swing inwards
-                        and outwards. Depending on the style of the frame, casement windows may complement classic or
-                        modern décor.</p>
-                    <p class="mb-4">This UPVC window design is lockable and thus built for safety. However, they are not
-                        the ideal choice if you're looking at installing window air conditioning units. You may also be
-                        in trouble if you leave the windows open on a rainy day.
+                    <h1 class="display-5 mb-4">1. Smart Design</h1>
+                    <p>Smart design aluminium windows bring a modern and sleek aesthetic to any home. With clean lines
+                        and a minimalist approach, these windows are a great choice for those who want a modern and
+                        sophisticated look. The aluminium frame is strong and durable, ensuring that your windows will
+                        last for years to come.</p>
+                    <p class="mb-4">The windows can be customized to fit your specific needs and are available in a
+                        range of colours and finishes, allowing you to match them to your home's existing style.
+                        Overall, smart design aluminium windows are a practical and stylish solution that will enhance
+                        the look and feel of any property.
                     </p>
                     <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
                 </div>
@@ -210,22 +212,22 @@
 
             <div class="row g-3">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">2. Fixed UPVC Window Design</h1>
-                    <p>Fixed windows or picture windows are self-explanatory. These windows are permanently fixed and do
-                        not open or close. Since they are fixed, they may be any size of shape and require minimal
-                        hardware.</p>
-                    <p class="mb-4">Their function is mainly ornamental and to bring in natural light into the room
-                        while keeping dust, pollution and noise outside. Fixed UPVC windows with grills are often
-                        installed in staircases, bathrooms, attics and hallways. They are also installed in rooms that
-                        have alternative ventilation systems.
+                    <h1 class="display-5 mb-4">2. Tilt and Turn Aluminium Windows</h1>
+                    <p>Aleco's windows are designed to offer maximum versatility, functionality, and security. They are
+                        made from high-quality aluminium that provides strength and durability, while also being
+                        energy-efficient and low-maintenance.</p>
+                    <p class="mb-4">Tilt and turn windows can be opened in two ways - by tilting inwards for ventilation
+                        or by turning inwards for easy cleaning. With tilt and turn aluminium windows, you get the
+                        perfect balance of form, function, and style, making them an ideal choice for any home or
+                        building.
                     </p>
                     <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
+                        <img class="img-fluid" src="img/about-11.png" alt="Hotel-sadka-client-aleco"
                             title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
+                        <img class="img-fluid" src="img/about-12.png" alt="Mount-litera-Zee-school-Amritsar"
                             title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
@@ -234,18 +236,22 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
+                        <img class="img-fluid" src="img/about-13.png" alt="Hotel-sadka-client-aleco"
                             title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
+                        <img class="img-fluid" src="img/about-14.png" alt="Mount-litera-Zee-school-Amritsar"
                             title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">3. Tilt and Turn UPVC Windows</h1>
-                    <p>Tilt-and-Turn UPVC window design is extremely low-maintenance. These windows function by tilting
-                        inwards or away from the frame to optimise airflow.</p>
-                    <p class="mb-4">They are suitable for controlled ventilation in open, spacious areas of the house.
-                        You can also use them in tight spaces where ventilation needs to be controlled.
+                    <h1 class="display-5 mb-4">3. Innovation in Aluminium Windows</h1>
+                    <p>Innovation Aluminium Windows are designed to provide a sleek, modern and energy-efficient
+                        solution for residential and commercial buildings. Their range of aluminium windows offers
+                        various styles and configurations, including tilt-and-turn, casement, sliding and fixed windows,
+                        to cater to different needs and preferences.</p>
+                    <p class="mb-4">The use of high-quality aluminium material in their windows guarantees durability,
+                        strength and low maintenance, while their advanced glazing technology provides excellent
+                        insulation and sound reduction. Innovation Aluminium Windows is the perfect choice for anyone
+                        looking for a sleek, functional and sustainable window solution.
                     </p>
                     <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
                 </div>
@@ -253,21 +259,22 @@
 
             <div class="row g-3">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">4. Sliding UPVC Windows</h1>
-                    <p>Sliding UPVC window design is a great space savers for modern apartments. They can be fitted to
-                        slide horizontally or vertically and may be short or tall. What matters most is that the window
-                        frames follow parallel lio that they can slide easily.</p>
-                    <p class="mb-4">Sliding windows have movable panes or have one fixed and one sliding panel. You can
-                        even have multiple panels that slide against each other. Another alternative combination of
-                        glass and mesh is in the frames.
+                    <h1 class="display-5 mb-4">4. Durability with Affordable Range</h1>
+                    <p>Aluminum windows and doors are becoming increasingly popular due to their durability and low
+                        maintenance. They are made from a strong and lightweight metal that is resistant to corrosion
+                        and rust. Aluminum frames are also energy efficient, as they do not expand or contract like
+                        other materials, reducing air infiltration and energy loss.</p>
+                    <p class="mb-4">Additionally, aluminum windows and doors are fire-resistant and offer excellent
+                        security features. Overall, aluminum windows and doors are a great investment for homeowners
+                        looking for a durable, stylish, and energy-efficient solution.
                     </p>
                     <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
+                        <img class="img-fluid" src="img/about-15.png" alt="Hotel-sadka-client-aleco"
                             title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
+                        <img class="img-fluid" src="img/about-16.png" alt="Mount-litera-Zee-school-Amritsar"
                             title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
@@ -277,15 +284,15 @@
 
     <div class="container-xxl py-5">
         <div class="container pt-5">
-            <h1 class="display-5 mb-4">Why are Aleco's uPVC Windows a better alternative to Steel Windows?</h1>
-            <p>Traditionally, the windows and door market was dominated by steel. There is no doubt that steel is a
-                great material. However, uPVC has emerged as a better and eco-friendly alternative to steel. Here is why
-                uPVC windows /UPVC doors are better than steel ones.</p>
-            <p class="mb-4"><b>Environment Friendly</b> - uPVC windows/UPVC doors use far less energy to get converted from raw
+            <h1 class="display-5 mb-4">Why are Aleco's Aluminum Windows have more demand?</h1>
+            <p>Discover the many benefits of choosing our aluminum windows and doors for your home or office space:</p>
+            <p class="mb-4"><b>Environment Friendly</b> - uPVC windows/UPVC doors use far less energy to get converted
+                from raw
                 material to end product. On the other end, steel requires enormous energy to turn into an end-product.
                 This difference in energy consumption can run into tonnes.
             </p>
-            <p class="mb-4">Apart from this, uPVC windows provide a <b>highly insulated environment</b> as plastic is a bad
+            <p class="mb-4">Apart from this, uPVC windows provide a <b>highly insulated environment</b> as plastic is a
+                bad
                 conductor of heat. On the other hand, steel is a good conductor of heat and winters/summers can be harsh
                 with steel windows.
             </p>
@@ -301,7 +308,7 @@
                     <h3 class="text-light mb-4">Address</h3>
                     <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Plot no.4, Peshawarian Farms,
                         Loharka Rd, Amritsar, Punjab</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91 8146-042-285</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91 8146 042 285</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@alecowindows.com</p>
                     <div class="d-flex pt-2">
                         <!-- <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a> -->
