--- a/railings-internal-partitions.html
+++ b/railings-internal-partitions.html
@@ -190,9 +190,9 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
+                        <img class="img-fluid" src="img/frameless-door-alu.png" alt=""
                             title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
+                        <img class="img-fluid" src="img/frameless-door-alu-2.png" alt=""
                             title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
@@ -227,9 +227,9 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
+                        <img class="img-fluid" src="img/about-1.png" alt=""
                             title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
+                        <img class="img-fluid" src="img/about-2.png" alt=""
                             title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
@@ -238,9 +238,9 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
+                        <img class="img-fluid" src="img/about-1.png" alt=""
                             title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
+                        <img class="img-fluid" src="img/about-2.png" alt=""
                             title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
@@ -289,7 +289,7 @@
                     <h3 class="text-light mb-4">Address</h3>
                     <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Plot no.4, Peshawarian Farms,
                         Loharka Rd, Amritsar, Punjab</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91 8146-042-285</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91 8146 042 285</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@alecowindows.com</p>
                     <div class="d-flex pt-2">
                         <!-- <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a> -->
