--- a/about.html
+++ b/about.html
@@ -131,6 +131,34 @@
     </div>
     <!-- Page Header End -->
 
+    <!-- <div class="container-xxl py-5">
+        <div class="container">
+            <div class="clearfix">
+                <img src="..." class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
+
+                <p>
+                    A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're
+                    adding
+                    quite a few meaningless phrases here to demonstrate how the columns interact here with the floated
+                    image.
+                </p>
+
+                <p>
+                    As you can see the paragraphs gracefully wrap around the floated image. Now imagine how this would
+                    look with
+                    some actual content in here, rather than just this boring placeholder text that goes on and on, but
+                    actually
+                    conveys no tangible information at. It simply takes up space and should not really be read.
+                </p>
+
+                <p>
+                    And yet, here you are, still persevering in reading this placeholder text, hoping for some more
+                    insights, or
+                    some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that here.
+                </p>
+            </div>
+        </div>
+    </div> -->
 
     <!-- About Start -->
     <div class="container-xxl py-5">
@@ -155,8 +183,8 @@
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary"
                             style="width: 120px; height: 120px;">
                             <h1 class="display-1 mb-n2" data-toggle="counter-up">10</h1>
-                        <span style="font-size: 38px;font-weight: 900;color: #218d43;"> +</span>
-                    </div>
+                            <span style="font-size: 38px;font-weight: 900;color: #218d43;"> +</span>
+                        </div>
                         <div class="ps-4">
                             <h3>Years</h3>
                             <h3>Serving</h3>
@@ -181,126 +209,63 @@
                 <div class="slide"><img src="./img/clients/4.png"></div>
                 <div class="slide"><img src="./img/clients/5.png"></div>
                 <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/7.png"></div>
                 <div class="slide"><img src="./img/clients/1.png"></div>
                 <div class="slide"><img src="./img/clients/2.png"></div>
                 <div class="slide"><img src="./img/clients/3.png"></div>
                 <div class="slide"><img src="./img/clients/4.png"></div>
                 <div class="slide"><img src="./img/clients/5.png"></div>
                 <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/7.png"></div>
                 <div class="slide"><img src="./img/clients/1.png"></div>
                 <div class="slide"><img src="./img/clients/2.png"></div>
                 <div class="slide"><img src="./img/clients/3.png"></div>
                 <div class="slide"><img src="./img/clients/4.png"></div>
                 <div class="slide"><img src="./img/clients/5.png"></div>
                 <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/7.png"></div>
                 <div class="slide"><img src="./img/clients/1.png"></div>
                 <div class="slide"><img src="./img/clients/2.png"></div>
                 <div class="slide"><img src="./img/clients/3.png"></div>
                 <div class="slide"><img src="./img/clients/4.png"></div>
                 <div class="slide"><img src="./img/clients/5.png"></div>
                 <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/7.png"></div>
                 <div class="slide"><img src="./img/clients/1.png"></div>
                 <div class="slide"><img src="./img/clients/2.png"></div>
                 <div class="slide"><img src="./img/clients/3.png"></div>
                 <div class="slide"><img src="./img/clients/4.png"></div>
                 <div class="slide"><img src="./img/clients/5.png"></div>
                 <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/7.png"></div>
                 <div class="slide"><img src="./img/clients/1.png"></div>
                 <div class="slide"><img src="./img/clients/2.png"></div>
                 <div class="slide"><img src="./img/clients/3.png"></div>
                 <div class="slide"><img src="./img/clients/4.png"></div>
                 <div class="slide"><img src="./img/clients/5.png"></div>
                 <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/7.png"></div>
                 <div class="slide"><img src="./img/clients/1.png"></div>
                 <div class="slide"><img src="./img/clients/2.png"></div>
                 <div class="slide"><img src="./img/clients/3.png"></div>
                 <div class="slide"><img src="./img/clients/4.png"></div>
                 <div class="slide"><img src="./img/clients/5.png"></div>
                 <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/7.png"></div>
                 <div class="slide"><img src="./img/clients/1.png"></div>
                 <div class="slide"><img src="./img/clients/2.png"></div>
                 <div class="slide"><img src="./img/clients/3.png"></div>
                 <div class="slide"><img src="./img/clients/4.png"></div>
                 <div class="slide"><img src="./img/clients/5.png"></div>
                 <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/7.png"></div>
                 <div class="slide"><img src="./img/clients/1.png"></div>
                 <div class="slide"><img src="./img/clients/2.png"></div>
                 <div class="slide"><img src="./img/clients/3.png"></div>
                 <div class="slide"><img src="./img/clients/4.png"></div>
                 <div class="slide"><img src="./img/clients/5.png"></div>
                 <div class="slide"><img src="./img/clients/6.png"></div>
-                <div class="slide"><img src="./img/clients/1.png"></div>
-                <div class="slide"><img src="./img/clients/2.png"></div>
-                <div class="slide"><img src="./img/clients/3.png"></div>
-                <div class="slide"><img src="./img/clients/4.png"></div>
-                <div class="slide"><img src="./img/clients/5.png"></div>
-                <div class="slide"><img src="./img/clients/6.png"></div>
-                <div class="slide"><img src="./img/clients/1.png"></div>
-                <div class="slide"><img src="./img/clients/2.png"></div>
-                <div class="slide"><img src="./img/clients/3.png"></div>
-                <div class="slide"><img src="./img/clients/4.png"></div>
-                <div class="slide"><img src="./img/clients/5.png"></div>
-                <div class="slide"><img src="./img/clients/6.png"></div>
-                <div class="slide"><img src="./img/clients/1.png"></div>
-                <div class="slide"><img src="./img/clients/2.png"></div>
-                <div class="slide"><img src="./img/clients/3.png"></div>
-                <div class="slide"><img src="./img/clients/4.png"></div>
-                <div class="slide"><img src="./img/clients/5.png"></div>
-                <div class="slide"><img src="./img/clients/6.png"></div>
-                <div class="slide"><img src="./img/clients/1.png"></div>
-                <div class="slide"><img src="./img/clients/2.png"></div>
-                <div class="slide"><img src="./img/clients/3.png"></div>
-                <div class="slide"><img src="./img/clients/4.png"></div>
-                <div class="slide"><img src="./img/clients/5.png"></div>
-                <div class="slide"><img src="./img/clients/6.png"></div>
-                <div class="slide"><img src="./img/clients/1.png"></div>
-                <div class="slide"><img src="./img/clients/2.png"></div>
-                <div class="slide"><img src="./img/clients/3.png"></div>
-                <div class="slide"><img src="./img/clients/4.png"></div>
-                <div class="slide"><img src="./img/clients/5.png"></div>
-                <div class="slide"><img src="./img/clients/6.png"></div>
-                <div class="slide"><img src="./img/clients/1.png"></div>
-                <div class="slide"><img src="./img/clients/2.png"></div>
-                <div class="slide"><img src="./img/clients/3.png"></div>
-                <div class="slide"><img src="./img/clients/4.png"></div>
-                <div class="slide"><img src="./img/clients/5.png"></div>
-                <div class="slide"><img src="./img/clients/6.png"></div>
-                <div class="slide"><img src="./img/clients/1.png"></div>
-                <div class="slide"><img src="./img/clients/2.png"></div>
-                <div class="slide"><img src="./img/clients/3.png"></div>
-                <div class="slide"><img src="./img/clients/4.png"></div>
-                <div class="slide"><img src="./img/clients/5.png"></div>
-                <div class="slide"><img src="./img/clients/6.png"></div>
-                <div class="slide"><img src="./img/clients/1.png"></div>
-                <div class="slide"><img src="./img/clients/2.png"></div>
-                <div class="slide"><img src="./img/clients/3.png"></div>
-                <div class="slide"><img src="./img/clients/4.png"></div>
-                <div class="slide"><img src="./img/clients/5.png"></div>
-                <div class="slide"><img src="./img/clients/6.png"></div>
-                <div class="slide"><img src="./img/clients/1.png"></div>
-                <div class="slide"><img src="./img/clients/2.png"></div>
-                <div class="slide"><img src="./img/clients/3.png"></div>
-                <div class="slide"><img src="./img/clients/4.png"></div>
-                <div class="slide"><img src="./img/clients/5.png"></div>
-                <div class="slide"><img src="./img/clients/6.png"></div>
-                <div class="slide"><img src="./img/clients/1.png"></div>
-                <div class="slide"><img src="./img/clients/2.png"></div>
-                <div class="slide"><img src="./img/clients/3.png"></div>
-                <div class="slide"><img src="./img/clients/4.png"></div>
-                <div class="slide"><img src="./img/clients/5.png"></div>
-                <div class="slide"><img src="./img/clients/6.png"></div>
-                <div class="slide"><img src="./img/clients/1.png"></div>
-                <div class="slide"><img src="./img/clients/2.png"></div>
-                <div class="slide"><img src="./img/clients/3.png"></div>
-                <div class="slide"><img src="./img/clients/4.png"></div>
-                <div class="slide"><img src="./img/clients/5.png"></div>
-                <div class="slide"><img src="./img/clients/6.png"></div>
-                <div class="slide"><img src="./img/clients/1.png"></div>
-                <div class="slide"><img src="./img/clients/2.png"></div>
-                <div class="slide"><img src="./img/clients/3.png"></div>
-                <div class="slide"><img src="./img/clients/4.png"></div>
-                <div class="slide"><img src="./img/clients/5.png"></div>
-                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/7.png"></div>
             </section>
         </div>
     </div>
@@ -447,7 +412,7 @@
                     <h3 class="text-light mb-4">Address</h3>
                     <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Plot no.4, Peshawarian Farms,
                         Loharka Rd, Amritsar, Punjab</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91 7947 129 016</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91 8146 042 285</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@alecowindows.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
@@ -534,7 +499,7 @@
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-    
+
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="./js/slick.min.js" type="text/javascript" charset="utf-8"></script> -->
 
