--- a/about.html
+++ b/about.html
@@ -131,34 +131,33 @@
     </div>
     <!-- Page Header End -->
 
-    <!-- <div class="container-xxl py-5">
+    <div class="container-xxl py-5">
         <div class="container">
             <div class="clearfix">
-                <img src="..." class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
-
+                <img style="max-width: 500px;" src="img/aleco-windows-amritsar-history.png" class="col-md-6 float-md-end mb-3 ms-md-3"
+                    alt="aleco-windows-amritsar-history.png">
                 <p>
-                    A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're
-                    adding
-                    quite a few meaningless phrases here to demonstrate how the columns interact here with the floated
-                    image.
+                    Aleco Doors and Windows was founded in 2010 with the goal of providing top-quality doors and
+                    windows to residential and commercial customers. The company's founders recognized the need for
+                    durable, energy-efficient, and stylish door and window options, and they set out to fill that need
+                    with their own brand.
                 </p>
-
                 <p>
-                    As you can see the paragraphs gracefully wrap around the floated image. Now imagine how this would
-                    look with
-                    some actual content in here, rather than just this boring placeholder text that goes on and on, but
-                    actually
-                    conveys no tangible information at. It simply takes up space and should not really be read.
+                    From the beginning, Aleco Doors and Windows focused on delivering outstanding customer service
+                    and a commitment to quality workmanship. This dedication to excellence paid off in the form of
+                    repeat customers and positive word-of-mouth referrals. Over the years, the company expanded its
+                    offerings to include a wider range of door and window options, as well as custom fabrication
+                    services for clients with unique needs.
                 </p>
-
                 <p>
-                    And yet, here you are, still persevering in reading this placeholder text, hoping for some more
-                    insights, or
-                    some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that here.
+                    One of the keys to Aleco Doors and Windows' success has been its commitment to using only the
+                    best materials available. Whether it's top-of-the-line hardware or the finest lumber and glass, the
+                    company's products are built to last and perform well for years to come. This focus on quality has
+                    earned the company a reputation for being a reliable and trustworthy provider of doors and windows.
                 </p>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <!-- About Start -->
     <div class="container-xxl py-5">
