--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
+    <meta name="google-site-verification" content="xkfQnRq3q-KtJAANAgsr6FP4RPPqQZz95q5oL9MMMDY" />
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
@@ -269,7 +270,7 @@
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-5.png" alt="Icon">
                             <h3 class="mb-3">UPVC Doors & Windows</h3>
-                            <p class="mb-4">UPVC doors and windows are known for their energy-efficiency, providing
+                            <p class="mb-4">UPVC doors and windows are known for their efficiency in providing
                                 improved insulation and reducing heat loss.</p>
                             <a class="btn" href="./upvc-doors-windows.html">Read More</a>
                         </div>
@@ -281,7 +282,7 @@
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-6.png" alt="Icon">
                             <h3 class="mb-3">Everest Max System</h3>
-                            <p class="mb-4">The Max system refers to the company's high-end product range, which is
+                            <p class="mb-4">The Max system refers to the Aleco's high-end product range, which is
                                 designed to provide with the combination of security, and
                                 energy efficiency.</p>
                             <a class="btn" href="./upvc-doors-windows.html">Read More</a>
@@ -295,7 +296,7 @@
                             <img class="mb-4" src="img/icons/icon-7.png" alt="Icon">
                             <h3 class="mb-3">Aluminium Doors & Windows</h3>
                             <p class="mb-4">Aluminium doors and windows can be manufactured with high-performance double
-                                glazing and weather stripping, improving their energy efficiency.</p>
+                                glazing and weather stripping, improving their efficiency.</p>
                             <a class="btn" href="./aluminium-doors-windows.html">Read More</a>
                         </div>
                     </div>
@@ -306,8 +307,8 @@
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-8.png" alt="Icon">
                             <h3 class="mb-3">Railings and Internal Partitions</h3>
-                            <p class="mb-4">We use high-quality and durable materials, such as stainless steel, glass,
-                                and wood, to manufacture the railings and partitions.</p>
+                            <p class="mb-4">We use high-quality and durable materials, such as stainless steel and glass
+                                to manufacture elegant and solid railings and partitions.</p>
                             <a class="btn" href="./railings-internal-partitions.html">Read More</a>
                         </div>
                     </div>
