--- a/railings-internal-partitions.html
+++ b/railings-internal-partitions.html
@@ -227,37 +227,11 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt=""
+                        <img class="img-fluid" src="img/alluminium-glass-railings-1.png" alt=""
                             title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt=""
+                        <img class="img-fluid" src="img/alluminium-glass-railings-2.png" alt=""
                             title="Mout Litera Zee School Amritsar">
                     </div>
-                </div>
-            </div>
-
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
-                    <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt=""
-                            title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt=""
-                            title="Mout Litera Zee School Amritsar">
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">3. SS Glass Railing</h1>
-                    <p>Upgrade your space with the ultimate in style and durability - our stainless steel glass railing
-                        system. Perfect for both residential and commercial applications, our railing provides a sleek
-                        and modern look while ensuring safety and security. The combination of high-quality stainless
-                        steel and tempered glass creates a barrier that is both visually stunning and built to last.
-                        With its clean lines and minimalist design, our stainless steel glass railing adds a touch of
-                        sophistication to any space.</p>
-                    <p class="mb-4">Whether you're looking to enhance the look of your staircase, deck, or balcony, our
-                        railing is the perfect solution. With easy installation and a range of customization options,
-                        you can create a look that truly reflects your personal taste and style. Make your space shine
-                        with our stainless steel glass railing.
-                    </p>
-                    <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
                 </div>
             </div>
         </div>
