--- a/about.html
+++ b/about.html
@@ -137,23 +137,23 @@
                 <img style="max-width: 500px;" src="img/aleco-windows-amritsar-history.png" class="col-md-6 float-md-end mb-3 ms-md-3"
                     alt="aleco-windows-amritsar-history.png">
                 <p>
-                    Aleco Doors and Windows was founded in 2010 with the goal of providing top-quality doors and
+                    Aleco Doors and Windows was founded in 2014 with the goal of providing top-quality doors and
                     windows to residential and commercial customers. The company's founders recognized the need for
                     durable, energy-efficient, and stylish door and window options, and they set out to fill that need
-                    with their own brand.
+                    with their own brand <b>"Aleco"</b>.
                 </p>
                 <p>
-                    From the beginning, Aleco Doors and Windows focused on delivering outstanding customer service
+                    From the beginning, <b>Aleco Doors and Windows</b> focused on delivering outstanding customer service
                     and a commitment to quality workmanship. This dedication to excellence paid off in the form of
                     repeat customers and positive word-of-mouth referrals. Over the years, the company expanded its
-                    offerings to include a wider range of door and window options, as well as custom fabrication
+                    offerings to include a <b>wider range</b> of door and window options, as well as custom fabrication
                     services for clients with unique needs.
                 </p>
                 <p>
                     One of the keys to Aleco Doors and Windows' success has been its commitment to using only the
-                    best materials available. Whether it's top-of-the-line hardware or the finest lumber and glass, the
+                    best materials available. Whether it's <b>top-of-the-line</b> hardware or the finest lumber and glass, the
                     company's products are built to last and perform well for years to come. This focus on quality has
-                    earned the company a reputation for being a reliable and trustworthy provider of doors and windows.
+                    earned the company a reputation for being a <b>reliable and trustworthy</b> provider of doors and windows.
                 </p>
             </div>
         </div>
