--- a/about.html
+++ b/about.html
@@ -8,8 +8,11 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicons/site.webmanifest">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -77,7 +80,7 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn"
+    <nav style="gap: 10px" class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn"
         data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
             <img class="me-3 logo-img" src="./img/icons/logo-aleco-doors-and-windows.png" width="350px" alt="Icon"> <img
@@ -134,8 +137,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="clearfix">
-                <img style="max-width: 500px;" src="img/aleco-windows-amritsar-history.png" class="col-md-6 float-md-end mb-3 ms-md-3"
-                    alt="aleco-windows-amritsar-history.png">
+                <img style="max-width: 500px;" src="img/aleco-windows-amritsar-history.png"
+                    class="col-md-6 float-md-end mb-3 ms-md-3" alt="aleco-windows-amritsar-history.png">
                 <p>
                     Aleco Doors and Windows was founded in 2014 with the goal of providing top-quality doors and
                     windows to residential and commercial customers. The company's founders recognized the need for
@@ -143,7 +146,8 @@
                     with their own brand <b>"Aleco"</b>.
                 </p>
                 <p>
-                    From the beginning, <b>Aleco Doors and Windows</b> focused on delivering outstanding customer service
+                    From the beginning, <b>Aleco Doors and Windows</b> focused on delivering outstanding customer
+                    service
                     and a commitment to quality workmanship. This dedication to excellence paid off in the form of
                     repeat customers and positive word-of-mouth referrals. Over the years, the company expanded its
                     offerings to include a <b>wider range</b> of door and window options, as well as custom fabrication
@@ -151,9 +155,11 @@
                 </p>
                 <p>
                     One of the keys to Aleco Doors and Windows' success has been its commitment to using only the
-                    best materials available. Whether it's <b>top-of-the-line</b> hardware or the finest lumber and glass, the
+                    best materials available. Whether it's <b>top-of-the-line</b> hardware or the finest lumber and
+                    glass, the
                     company's products are built to last and perform well for years to come. This focus on quality has
-                    earned the company a reputation for being a <b>reliable and trustworthy</b> provider of doors and windows.
+                    earned the company a reputation for being a <b>reliable and trustworthy</b> provider of doors and
+                    windows.
                 </p>
             </div>
         </div>
@@ -414,7 +420,7 @@
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91 8146 042 285</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@alecowindows.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
+                        <!-- <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a> -->
                         <a class="btn btn-square btn-outline-body me-1"
                             href="https://www.facebook.com/ecodoorswindows/"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square btn-outline-body me-1"
