--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                         </div>
                         <div class="col-12 col-sm-6">
                             <select id="serviceEI" class="form-select" style="height: 55px;">
-                                <option selected>Choose Service</option>
+                                <option selected value="default">Choose a Service</option>
                                 <option value="1">UPVC Windows and Doors</option>
                                 <option value="2">Aluminium Windows and Doors</option>
                                 <option value="3">Railings and Internal Partitions</option>
