--- a/project.html
+++ b/project.html
@@ -265,7 +265,7 @@
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91 8146 042 285</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@alecowindows.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
+                        <!-- <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a> -->
                         <a class="btn btn-square btn-outline-body me-1"
                             href="https://www.facebook.com/ecodoorswindows/"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square btn-outline-body me-1"
