adding all the changes

--- a/about.html
+++ b/about.html
@@ -137,8 +137,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="clearfix">
-                <img style="max-width: 500px;" src="img/aleco-windows-amritsar-history.png"
-                    class="col-md-6 float-md-end mb-3 ms-md-3" alt="aleco-windows-amritsar-history.png">
+                <img style="max-width: 450px;border: 5px solid #218d43;" src="img/aleco-windows-amritsar-history.png"
+                    class="col-md-6 float-md-end mb-3 ms-md-5" alt="aleco-windows-amritsar-history.png">
                 <p>
                     Aleco Doors and Windows was founded in 2014 with the goal of providing top-quality doors and
                     windows to residential and commercial customers. The company's founders recognized the need for
@@ -320,9 +320,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="feature-img">
-                        <img class="img-fluid" src="img/about-2.jpg" alt="">
-                        <img class="img-fluid" src="img/about-1.jpg" alt="">
+                    <div style="margin-top: 20px;border: 10px double #218d43;">
+                        <img width="100%" class="img-fluid" src="img/about-aleco-windows.png" alt="">
                     </div>
                 </div>
             </div>
