--- a/index.html
+++ b/index.html
@@ -387,9 +387,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="feature-img">
-                        <img class="img-fluid" src="img/about-2.jpg" alt="">
-                        <img class="img-fluid" src="img/about-1.jpg" alt="">
+                    <div style="margin-top: 20px;border: 10px double #218d43;">
+                        <img width="100%" class="img-fluid" src="img/aleco-doors-windows-amritsar.png" alt="">
                     </div>
                 </div>
             </div>
